--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,11 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
-        "fastify": "^5.0.0",
         "@fastify/cors": "^10.0.0",
-        "mongoose": "^8.1.0",
-        "dotenv": "^16.4.1"
+        "@fastify/static": "^9.0.0",
+        "dotenv": "^16.4.1",
+        "fastify": "^5.0.0",
+        "mongoose": "^8.1.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.3"
