router and zustand store implemented

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,18 +8,20 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
-        "fastify": "^4.29.1",
-        "fastify-socket.io": "^5.1.0",
         "@fastify/cookie": "^8.3.0",
         "@fastify/cors": "^8.5.0",
         "@fastify/jwt": "^7.2.0",
         "@fastify/rate-limit": "^7.6.0",
         "@fastify/static": "^6.12.0",
-
+        "axios": "^1.13.4",
+        "axios-cookiejar-support": "^6.0.5",
         "dotenv": "^16.4.1",
-        "mongoose": "^8.1.0",
+        "fastify": "^4.29.1",
+        "fastify-socket.io": "^5.1.0",
         "ioredis": "^5.9.2",
-        "jsonwebtoken": "^9.0.3"
+        "jsonwebtoken": "^9.0.3",
+        "mongoose": "^8.1.0",
+        "tough-cookie": "^6.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.3"
