--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
         "@fastify/static": "^6.12.0",
         "axios": "^1.13.4",
         "axios-cookiejar-support": "^6.0.5",
+        "bcrypt": "^6.0.0",
         "dotenv": "^16.4.1",
         "fastify": "^4.29.1",
         "fastify-socket.io": "^5.1.0",
